# Odin

./: .gitignore  CMakeLists.txt  build_odin.sh  odin_lldb.py
base/intrinsics/: intrinsics.odin
base/runtime/: heap_allocator_unix.odin  procs_darwin.odin
core/c/libc/: complex.odin  ctype.odin  errno.odin  math.odin  setjmp.odin  signal.odin  stdio.odin  stdlib.odin  string.odin  time.odin  uchar.odin  wchar.odin  wctype.odin
core/mem/virtual/: virtual_darwin.odin
core/odin/ast/: clone.odin
core/odin/parser/: parse_files.odin  parser.odin
core/os/: os_darwin.odin
core/path/filepath/: path_unix.odin
core/prof/spall/: spall_unix.odin
core/strconv/: strconv.odin
core/sync/: futex_darwin.odin  primitives_darwin.odin
core/sys/darwin/: mach_darwin.odin  sync.odin
core/sys/linux/: sys.odin
core/sys/posix/: arpa_inet.odin  pthread.odin
core/sys/unix/: pthread_darwin.odin  time_unix.odin
core/time/: tsc_darwin.odin
sandbox/test_nested_package/: foo.odin  main.odin
sandbox/test_nested_package/other/: other.odin
sandbox/test_nested_package/platform.odin/: hello.odin
src/: build_settings.cpp  check_builtin.cpp  check_decl.cpp  check_expr.cpp  checker.cpp  entity.cpp  error.cpp  linker.cpp  llvm_backend.cpp  llvm_backend_proc.cpp  llvm_backend_utility.cpp  main.cpp  parser.cpp  parser.hpp  path.cpp  threading.cpp  types.cpp
